[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# to convert strings to enums (day 02)
strum = "0.24.1"
strum_macros = "0.24.1"
# to parse numbers from strings (day 03)
regex = "1.7.1"
lazy_static = "1.4.0"
